# Nidalee

./: .gitignore  README.md  index.html  package-lock.json  package.json  release.md  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  firebase.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: mac.icns
src-tauri/src/: main.rs
src/components/: AddAccount.tsx  MainSection.tsx  Settings.tsx  Statistics.tsx  Tabs.tsx  TitleBar.tsx
src/types/: events.ts  index.ts
